<resources>
    <string name="app_name">Simple Product</string>

    <string name="home_title">Home</string>
    <string name="detail_title">Detail</string>
    <string name="signup_title">Buat Akun</string>
    <string name="login_title">Masuk</string>
    <string name="profile_title">Profil</string>
    <string name="order_title">Pesanan</string>
    <string name="admin_title">Admin</string>

    <string name="name">Name of Product</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Feugiat vivamus at augue eget arcu dictum varius duis.</string>
    <string name="detail_product">Detail Produk</string>
    <string name="description">Deskripsi Produk</string>
    <string name="sum_item">x%d</string>
    <string name="price">Rp78.000</string>
    <string name="image_description">deskripsi gambar</string>
    <string name="author">Penulis</string>
    <string name="publicationYear">Tahun Terbit</string>
    <string name="publisher">Penerbit</string>
    <string name="notes">Catatan Produk</string>
    <string name="notes_hint">Tambahkan catatan untuk penjual..</string>
    <string name="sum">Jumlah</string>
    <string name="account">Akun</string>
    <string name="default_value">1</string>
    <string name="name_person">Namanyaa</string>
    <string name="email">email</string>
    <string name="order">Pesanan</string>

    <string name="login_message">Selamat Datang di SimpleProduct!</string>
    <string name="signup_message">Silakan lengkapi data Anda di bawah ini!</string>
    <string name="username">Nama</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="buyer">buyer</string>
    <string name="admin">admin</string>
    <string name="login_text">Sudah mempunyai akun?<font fgcolor="#2196F3"> Masuk</font></string>
    <string name="signup_text">Belum mempunyai akun?<font fgcolor="#2196F3"> Daftar </font></string>
    <string name="signup_success">Akun berhasil dibuat</string>
    <string name="cant_empty">Kolom ini tidak boleh kosong</string>
    <string name="login_success">Berhasil masuk</string>
    <string name="confirm_logout">konfirmasi keluar</string>
    <string name="logout_message">Apakah anda yakin ingin keluar dari aplikasi?</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>

    <string name="order_confirm">Pesanan diproses</string>
    <string name="order_error">Pesanan gagal diproses</string>

    <string name="btn_order">Beli Sekarang</string>
    <string name="btn_regist">Daftar Akun</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_logout">Keluar</string>
</resources>